# quiz_edication_bot

./: .env  .gitignore  Dockerfile  FSM.py  README.md  functions.py  gemini.md  google_sheets.py  handlers.py  keyboards.py  main.py  pyproject.toml  structure.py
.github/workflows/: ci.yml
